# lightpy

./: LICENSE  README.md  README.qmd  pyproject.toml  requirements.txt  running_experiments.ipynb
.github/workflows/: python-app.yml
config/: circular_aperture_airy.json  diffraction_grating.json  double_slit_interference.json  single_slit_basic.json
lightpy/: __init__.py  aperture_masks.py  config_manager.py  core_propagator.py  experiment_functions.py  plotting_utils.py  symmetry_handler.py  validation_utils.py
notebooks/: getting_started.ipynb  running_experiments.ipynb
scripts/: benchmark.py  gaussian_video.py  running_experiments.py  tiling_test.py
src/: __init__.py  core_propagator.py  experiment_functions.py  plotting_utils.py  validation_utils.py
tests/: test_core_propagator.py
