# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lightpy"
version = "0.1.0" # You can choose your initial version number
description = "A Python package for optical light propagation simulations."
readme = "README.md" # Optional, but good practice to have a README
requires-python = ">=3.9" # Specify your minimum Python version

[project.urls]
"Homepage" = "https://github.com/evanfrang/lightpy"
"Bug Tracker" = "https://github.com/evanfrang/lightpy/issues"

# Optional: Tool-specific configurations (e.g., for pytest, black, etc.)
[tool.setuptools.packages.find]
where = ["."] # Search for packages in the current directory (the project root)
include = ["lightpy*"] # Include the 'lightpy' package